jvmdg hackery